sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:26: error: Unmatched closing brace '}' ignored here
}
^