sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var fini = false;
  var lgr = getNombreValeurs ;
  
  while(!fini){
    fini = true;
    for(i <- 0 to lgr-2){
      if(plusPetit(i+1, i)){
        echange(i, i+1);
        fini = false;
      }
    /*for(i <- 0 to lgr-2){
      var j = lgr-2-i;
      
      if(plusPetit(j+1, j)){
        echange(j, j+1);
        fini = false;
      }*/
      }
    }
  }
}